2015-03-30  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Clean up store-address dialog

	* src/store-address.c (store_address_book_frame): add a label to
	explain address-book combo-box;
	(store_address_note_frame): add space after header name;
	(store_address_add_address): increase notebook tab label to 15
	characters;
	(store_address_add_lbaddress): ditto.

2015-03-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-mime-widget-crypto.c
	(balsa_mime_widget_signature_widget): put digital signature info
	in a GtkExpander.

2015-03-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-message.c: do not crash when current part is changed
	while the find-bar is showing.

2015-03-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/store-address.c (store_address_dialog): grab the keyboard
	focus to the default button, "OK", instead of the address book
	combo-box.

2015-03-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/store-address.c (balsa_store_address_from_messages): clean
	up code;
	(store_address_response): drop response for "save this address
	and keep the dialog open";
	(store_address_dialog): use header bar, and change buttons to
	standard OK/Cancel;
	(store_address_book_frame): do not put a GtkFrame around the
	address-book combo-box;
	(store_address_note_frame): do not put a GtkFrame around the
	address notebook.

2015-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not use header bar in GtkMessageDialog, it does nothing

	* libbalsa/identity.c (delete_ident_cb):
	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_accept_low_trust_key):
	* libbalsa/libbalsa.c (ask_timeout_real):
	* libbalsa/rfc3156.c (check_gpg_child):
	* src/ab-main.c (ab_warning):
	* src/balsa-message.c:
	* src/balsa-mime-widget-callbacks.c
	(balsa_mime_widget_ctx_menu_save):
	* src/folder-conf.c (folder_conf_delete):
	* src/information-dialog.c (balsa_information_dialog):

2015-03-25  Peter Bloomfield  <pbloomfield@bellsouth.net>
